test_suite5/ALAN/test_suite/alan-2022-examples/failing/001920_mutation.alan
source H begin function := 8 end
